--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     --purple-200: #A369FF;
     --purple-300: #8733FF;
     --purple-500: #5A13B4; 
+
+    --html: #DB4E26;
+    --CSS: #2862EA;
+    --JS: #E2C431;
+    --WP: #207196;
 }
 
 *{
@@ -35,8 +40,8 @@ body{
     height: 150px;
 }
 
-.buttonHeader{
-    background-color: var(--purple-200);
+.button{
+    background-color: var(--purple-500);
     color: var(--white-300);
     padding: 10px 15px;
     text-decoration: none;
@@ -47,8 +52,8 @@ body{
     transition: background-color 0.5s ease;
 }
 
-.buttonHeader:hover{
-    background-color: var(--purple-500);
+.button:hover{
+    background-color: var(--purple-200);
     transition: background-color 0.5s ease;
 }
 
@@ -56,7 +61,6 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 2% 10%;
     gap: 40px;
 }
 
@@ -64,14 +68,127 @@ body{
     width: 750px;
 }
 
-#apresentacao h1 {
+.tituloBloco{
     font-size: 2.5rem;
     color: var(--white-300);
     font-weight: bold;
     margin-bottom: 10px;
 }
 
-#apresentacao p {
+.paragrafo{
     font-size: 1.4rem;
     color: var(--white-300);
+}
+
+.marginContainer{
+    margin: 8% 17%
+}
+
+.skillContainer{
+    display: flex;
+    justify-content: center;
+    gap: 30px
+    margin-top: 30px;
+}
+
+.skill{
+    padding: 10px 48.7px;
+    border:  2px solid;
+    border-radius: 10px;
+}
+
+.skill h3{
+    color: var(--white-300);
+    text-align: center;
+}
+
+.htmlColorBorder{
+    border-color: var(--html);
+}
+
+.cssColorBorder{
+    border-color: var(--CSS);
+}    
+
+.jsColorBorder{
+    border-color: var(--JS);
+}
+
+.wpColorBorder{
+    border-color: var(--WP);
+}  
+
+.formularioContato{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border:3px solid var(--purple-500);
+    border-radius: 25px;
+    margin: 0 25%;
+    padding: 35px 0;
+    min-height: 250px;
+    gap: 30px; 
+}
+
+.formularioContato input{
+    color: var(--white-300);
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid var(--white-300);
+    min-width: 260px; 
+    font-size: 1.2rem; 
+}
+
+.formularioContato input::placeholder{
+    color: var(--white-300);
+    font-size: 1.2rem;
+}
+
+.formularioContato textarea{
+    width: 360px;
+    height: 130px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    resize: none;
+    padding: 10px;
+}
+
+.formularioContato button{
+    border: none;
+}
+
+footer{
+    background-color: var(--purple-300);
+}
+
+footer div{
+    margin: 0 10%;
+    padding: 3% 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
+footer img{
+    max-width: 50px;
+}
+
+footer a{
+    color: var(--white-300);
+    text-decoration: none;
+}
+
+@media (max-width: 767px){
+    .containerButtons{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .button{
+        font-size: 0.9rem;
+        margin: 10px 0;
+    }
 }
